# arcosPx-napari

./: .pre-commit-config.yaml  42.0.0  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/arcospx/: __init__.py  _sample_data.py  _widget.py  napari.yaml  utils.py
src/arcospx/_tests/: test_sample_data.py  test_widget.py
src/arcospx/_tests/test_data/: 1_growing_track_events_true.tif  1_growing_true.tif  test_data_track_events_true.tif
