[metadata]
name = arcosPx-napari
version = 0.0.1
description = A plugin to track spatio-temporal correlations in images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bgraedel/arcosPx-napari
author = Benjamin Grädel
author_email = benjamin.graedel@unibe.ch
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/bgraedel/arcosPx-napari/issues
    Documentation = https://github.com/bgraedel/arcosPx-napari#README.md
    Source Code = https://github.com/bgraedel/arcosPx-napari
    User Support = https://github.com/bgraedel/arcosPx-napari/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    arcos4py >= 0.3.0

python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    arcosPx-napari = arcospx:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
